--- a/style.css
+++ b/style.css
@@ -27,6 +27,32 @@ div[class="out"] {
       border-color: black;
       background-color: blanchedalmond;
       }
+    input[type="text"] {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 0px;
+  font-size: 50px;
+  border: none;
+  border-style: hidden;
+  border-radius: 5px;
+  box-sizing: border-box;
+  text-align: right;
+  color: black;
+  background-color: beige;
+  outline: none;
+}
+    button {
+  width: 21%;
+  height: 80px;
+  font-size: 40px;
+  margin-left: 1.5%;
+  margin-right: 1.5%;
+  border: none;
+  border-radius: 8%;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
     }
 
   div[class="output"] {
