--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ h1{
     touch-action: pan-x pan-y;
     font-size: 100%; 
     user-select: none; 
+  }
   div{
     position: relative;
   max-width: 100%;
